# rsid3

./: .gitignore  Cargo.toml  LICENSE  README.MD  build.rs  flake.nix  shell.nix
.github/workflows/: main.yaml
src/: cli.rs  id3_helpers.rs  main.rs
tests/: cli_tests.rs
tests/common/: mod.rs
tools/: envrc  flake.nix
