[package]
name = "rsid3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
id3 = "1.12.0"
tempfile = "3.10.1"

[build-dependencies]
anyhow = "1.0.80"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }
